fixed layout issue

--- a/style/main-style.scss
+++ b/style/main-style.scss
@@ -494,7 +494,7 @@ main {
     margin-top: 0;
   }
 
-  .rows--container {
+  & > .rows--container {
     display: flex;
     flex-direction: row;
     margin-bottom: 3rem;
